tests/Error/ErrorCollector/SniffRunnerSource/easy-coding-standard.php
<?php

declare(strict_types=1);

use PHP_CodeSniffer\Standards\Generic\Sniffs\Arrays\ArrayIndentSniff;
use Symplify\EasyCodingStandard\Config\ECSConfig;

return ECSConfig::configure()
    ->withRules([ArrayIndentSniff::class]);
